# AutoBot

./: README.md
ros/ros_ws/src/bringup/: CMakeList.txt  package.xml
ros/ros_ws/src/bringup/launch/: autobot.launch
ros/ros_ws/src/bringup/src/: protocol.cpp  protocol.hpp  serial_node.cpp
ros/ros_ws/src/control/: CMakeList.txt  package.xml
ros/ros_ws/src/control/config/: control_params.yaml
ros/ros_ws/src/control/launch/: control.launch
ros/ros_ws/src/control/src/: motion_controller.cpp
ros/ros_ws/src/vision/: CMakeList.txt  package.xml
ros/ros_ws/src/vision/config/: vision_params.yaml
ros/ros_ws/src/vision/launch/: vision.launch
ros/ros_ws/src/vision/scripts/: calibrate_camera.py
ros/ros_ws/src/vision/src/: depth_filter.cpp  obstacle_detection.py
ros/ros_ws/src/voice/: CMakeList.txt  package.xml
ros/ros_ws/src/voice/config/: voice_commands.json  voice_params.yaml
ros/ros_ws/src/voice/launch/: voice.launch
ros/ros_ws/src/voice/scripts/: train_commands.py
ros/ros_ws/src/voice/src/: voice_command.py
stm32/: .clangd  .mxproject  .project  my32.ioc  showdata.ini
stm32/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
stm32/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
stm32/HARDWARE/: ads8867.c  ads8867.h  encoder.c  encoder.h  ly68l6400.c  ly68l6400.h  mcp4017.c  mcp4017.h  motor_pid.c  motor_pid.h  mpu6050.c  mpu6050.h  myfun.c  myfun.h  myusart.c  myusart.h  pwm_motor.c  pwm_motor.h  w25q128.c  w25q128.h
