<?xml version="1.0"?>
<package format="2">
  <name>autobot_control</name>
  <version>0.1.0</version>
  <description>Motion control and decision making for AutoBot project</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>