<?xml version="1.0"?>
<package format="2">
  <name>autobot_vision</name>
  <version>0.1.0</version>
  <description>Vision processing and obstacle detection for AutoBot project</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>