<?xml version="1.0"?>
<package format="2">
  <name>autobot_voice</name>
  <version>0.1.0</version>
  <description>Voice command interface for AutoBot project</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>